<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="4dp"
        android:orientation="vertical"
        tools:context="com.example.andriod.funquiz.MainActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif"
            android:text="@string/instruction"
            android:textAlignment="center"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@android:color/holo_red_light"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif"
            android:text="@string/actualInstructions"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@android:color/holo_red_light"
            android:textStyle="bold" />

        <CheckBox
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:id="@+id/terms_and_conditions_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="I agree to the terms and Conditions"
            android:textStyle="bold"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@android:color/holo_orange_dark"/>
        <Button
            android:id="@+id/startquiz_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/startExam"
            android:textStyle="bold"
            android:textColor="#FFFFFF"

            android:onClick="enterNameFunction"
            android:textAppearance="?android:textAppearanceSmall"
            android:background="@color/colorAccent"/>
    </LinearLayout>

</ScrollView>
